syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/techschool/simplebank/pb";

message UpdateUserRequest {
    string username = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string phone_number = 4;
    optional string profile_photo = 5;
    optional string email = 6;
    optional string password = 7;
}

message UpdateUserResponse {
    User user = 1;
}